--- a/client/views/vote/app.html
+++ b/client/views/vote/app.html
@@ -14,8 +14,14 @@
 
 {% raw %}
 <script type="text/x-handlebars" id="main">
-    <div style="position:fixed; top: 50px; right:0; width: 300px; height: 500px; background-color: #f0f0f0; z-index:9001;">
+    <div class="main-area">
+        {{render "player" player}}
+        {{ outlet }}
+    </div>
+</script>
 
+<script type="text/x-handlebars" data-template-name='player'>
+    <div class="sidebar-area player">
         {{#if current }}
         {{#link-to "band" current.band.id }}
         <div style="width: 200px; height: 200px; display: inline-block; margin: 10px; position: relative;" class="player">
@@ -36,7 +42,7 @@
         {{/if}}
         <audio {{bind-attr src=current.url }} id="tunefishPlayer"></audio>
         <div id="playCtrls" {{bind-attr class="playerState"}} >
-        <a href="#" {{action "pause"}}>pause</a> ({{currentTime}} / {{currentDuration}})
+            <a href="#" {{action "pause"}}>pause</a> ({{currentTime}} / {{currentDuration}})
         </div>
         <div id="idleCtrls" {{bind-attr class="playerState"}} >
             <a href="#" {{action "play"}}>play</a>
@@ -62,19 +68,17 @@
         </div>
 
     </div>
-    <hr/>
-    {{ outlet }}
 </script>
 
 <script type="text/x-handlebars" id="bands">
-    {{#view "bandgrid"}}
-    <div id="band-grid">
+    {{#view "bandgrid" id="band-list"}}
+
         {{#each band in this}}
 
         {{#link-to "band" band.id classNames="band-tile" data-sort=band.name data-voted=band.own_vote}}
         <div class="band-tile-content">
             {{#if band.voted}}<i class="i-done band-voted"></i>{{/if}}
-            <img class="band-tile-img" src="{{unbound band.thumbnail}}" alt="foo"/>
+            <img class="band-tile-img" src="{{unbound band.thumbnail}}" alt="{{unbound band.name}}"/>
             <div class="band-tile-desc">
                 {{ band.name }} ({{ band.ownVote }})
             </div>
@@ -83,94 +87,96 @@
 
         {{/each}}
         <div class="band-grid-gap"></div>
-    </div>
+
     {{/view}}
 </script>
 
 <script type="text/x-handlebars" id="band">
 
-    <h2>Band {{ name }} ({{ voteCount }} Votes, {{ voteAverage }})</h2>
+    <div id="band-detail" class="content-area band-detail">
+        <h2>Band {{ name }} ({{ voteCount }} Votes, {{ voteAverage }})</h2>
 
-    <p>{{#link-to 'bands' }}Bands{{/link-to}} / Band "{{ name }}"</p>
+        <p>{{#link-to 'bands' }}Bands{{/link-to}} / Band "{{ name }}"</p>
 
-    <a href="#" {{action "vote" 1}}>1</a>
-    <a href="#" {{action "vote" 2}}>2</a>
-    <a href="#" {{action "vote" 3}}>3</a>
-    <a href="#" {{action "vote" 4}}>4</a>
-    <a href="#" {{action "vote" 5}}>5</a>
-    <table style="width: 100%;">
-        <tbody>
-        <tr>
-            <td>Mitglieder:</td>
-            <td>{{ members }}</td>
-        </tr>
-        <tr>
-            <td>Herkunft:</td>
-            <td>{{ city }}<br/>
-                <img src="http://maps.googleapis.com/maps/api/staticmap?key=AIzaSyDRzrscCqKGd66mLS6jOayfUw9d4SICKOY&markers={{ unbound city }}&zoom=10&size=600x300&sensor=false"/>
-                <button {{ action "calcDistance" }} id="calcDist">Entfernung berechnen</button>
-            </td>
-        </tr>
-        <tr>
-            <td>Webseite:</td>
-            <td><a {{bind-attr href=website }}>{{ website }}</a>
-             {{#if facebookUrl }},
-              <a {{ bind-attr href=facebookUrl }}>facebook</a>
-              {{/if }}
-            </td>
-        </tr>
-        {{#if youtube_url }}
-        <tr>
-            <td>YouTube:</td>
-            <td>
-            <!-- Feel free to use some JS hacks to avoid this iframe, Dennis -->
-             <iframe id="ytplayer" type="text/html" width="640" height="390"
-                                        {{ bind-attr src=youtubeUrl }}"
-                                        frameborder="0"/>
-            </td>
-        </tr>
-        {{/if }}
+        <a href="#" {{action "vote" 1}}>1</a>
+        <a href="#" {{action "vote" 2}}>2</a>
+        <a href="#" {{action "vote" 3}}>3</a>
+        <a href="#" {{action "vote" 4}}>4</a>
+        <a href="#" {{action "vote" 5}}>5</a>
+        <table style="width: 100%;">
+            <tbody>
+            <tr>
+                <td>Mitglieder:</td>
+                <td>{{ members }}</td>
+            </tr>
+            <tr>
+                <td>Herkunft:</td>
+                <td>{{ city }}<br/>
+                    <img src="http://maps.googleapis.com/maps/api/staticmap?key=AIzaSyDRzrscCqKGd66mLS6jOayfUw9d4SICKOY&markers={{ unbound city }}&zoom=10&size=600x300&sensor=false"/>
+                    <button {{ action "calcDistance" }} id="calcDist">Entfernung berechnen</button>
+                </td>
+            </tr>
+            <tr>
+                <td>Webseite:</td>
+                <td><a {{bind-attr href=website }}>{{ website }}</a>
+                    {{#if facebookUrl }},
+                    <a {{ bind-attr href=facebookUrl }}>facebook</a>
+                    {{/if }}
+                </td>
+            </tr>
+            {{#if youtube_url }}
+            <tr>
+                <td>YouTube:</td>
+                <td>
+                    <!-- Feel free to use some JS hacks to avoid this iframe, Dennis -->
+                    <iframe id="ytplayer" type="text/html" width="640" height="390"
+                            {{ bind-attr src=youtubeUrl }}"
+                    frameborder="0"/>
+                </td>
+            </tr>
+            {{/if }}
 
-        <tr>
-            <td>Beschreibung:</td>
-            <td>{{ descp }}</td>
-        </tr>
-        </tbody>
-    </table>
+            <tr>
+                <td>Beschreibung:</td>
+                <td>{{ descp }}</td>
+            </tr>
+            </tbody>
+        </table>
 
-    <h3>Tracks</h3>     <a href="#" {{ action "addAllTracks" }}>Add all tracks to queue</a>
-    <ul>
-        {{#each track in tracks }}
-        <li ><a href="#" {{ action "addTrack" track }}>
-            {{ track.trackname }}
-            </a>
-        </li>
-        {{/each}}
-    </ul>
+        <h3>Tracks</h3>     <a href="#" {{ action "addAllTracks" }}>Add all tracks to queue</a>
+        <ul>
+            {{#each track in tracks }}
+            <li ><a href="#" {{ action "addTrack" track }}>
+                {{ track.trackname }}
+                </a>
+            </li>
+            {{/each}}
+        </ul>
 
-    <h3>Bandfoto</h3>
-    <img {{bind-attr src=image }} width="100%"/>
+        <h3>Bandfoto</h3>
+        <img {{bind-attr src=image }} width="100%"/>
 
-    <h3>Kommentare</h3>
-    <table style="width: 100%;">
-        <tbody>
-        {{#each comment in comments }}
-        <tr>
-            <td>{{ comment.author }} <br> {{ comment.timestamp }}</td>
-            <td>{{ comment.message }}</td>
-        </tr>
-        {{/each}}
+        <h3>Kommentare</h3>
+        <table style="width: 100%;">
+            <tbody>
+            {{#each comment in comments }}
+            <tr>
+                <td>{{ comment.author }} <br> {{ comment.timestamp }}</td>
+                <td>{{ comment.message }}</td>
+            </tr>
+            {{/each}}
 
-        </tbody>
-    </table>
-    <h3>Dein Kommentar:</h3>
-    <form {{action "addComment" on="submit"}}>
+            </tbody>
+        </table>
+        <h3>Dein Kommentar:</h3>
+        <form {{action "addComment" on="submit"}}>
 
         {{ textarea name="comment" value=comment id="new_comment" required="required" }}
 
         <button type="submit">Add</button>
 
-    </form>
+        </form>
+    </div>
 
 </script>
 {% endraw %}
