--- a/client/src/scss/base/_mixins.scss
+++ b/client/src/scss/base/_mixins.scss
@@ -1,5 +1,11 @@
 @mixin shadow($level: 1){
-    @if  $level == 1 {
+    @if  $level == -1 {
+            box-shadow: 0 -1px 3px rgba(0,0,0,0.12), 0 -1px 2px rgba(0,0,0,0.24);
+    }
+        @else if $level == -2 {
+            box-shadow: 0 -3px 6px rgba(0,0,0,0.12), 0 -3px 6px rgba(0,0,0,0.24);
+    }
+        @else if $level == 1 {
             box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     }
         @else if $level == 2 {
@@ -15,7 +21,7 @@
             box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
     }
         @else {
-            @warn "Level Value expected to be 1-5";
+            @warn "Level Value expected to be -1-5";
     }
 }
 
