--- a/client/views/vote/admin/band_list.html
+++ b/client/views/vote/admin/band_list.html
@@ -16,19 +16,27 @@
 
                     <h2>Bandübersicht</h2>
 
+                    {% set sort = request.args.sort|default('name') %}
+                    {% set reverse = request.args.reverse|default(0)|int %}
+
+                    {% macro build_sort_url(field, reverse) %}{{url_for('vote.admin.bands.list')}}?sort={{ field }}{% if reverse == 0 %}&amp;reverse=1{% endif %}{% endmacro %}
+
                     <table style="width: 100%;">
                         <thead>
                             <tr>
-                                <th>Band</th>
-                                <th>Mitgl.</th>
-                                <th>Herkunft</th>
-                                <th>Status</th>
-                                <th>Voting</th>
+                                <th><a href="{{ build_sort_url('name', reverse) }}">Band</a></th>
+                                <th><a href="{{ build_sort_url('amount_members', reverse) }}">Mitgl.</a></th>
+                                <th><a href="{{ build_sort_url('city', reverse) }}">Herkunft</a></th>
+                                <th><a href="{{ build_sort_url('state', reverse) }}">Status</a></th>
+                                <th>
+                                    <a href="{{ build_sort_url('vote_count', reverse) }}">Voting</a>,
+                                    <a href="{{ build_sort_url('vote_average', reverse) }}">&#8960;</a>
+                                </th>
                                 <th colspan="3">Optionen</th>
                             </tr>
                         </thead>
                         <tbody>
-                            {% for band in bands %}
+                            {% for band in bands|sort(attribute=sort, reverse=reverse) %}
                             <tr>
                                 <td><a href="{{ url_for('vote.admin.bands.view', band_id=band.id) }}">{{ band.name }}</a></td>
                                 <td>{% if band.amount_members != "NULL" %}{{ band.amount_members }}{% else %}?{% endif %}</td>
