[UPDATE] WIP PLAYER Styling WIP

--- a/client/src/scss/app-vote.scss
+++ b/client/src/scss/app-vote.scss
@@ -25,7 +25,9 @@
 
 @import "page/login";
 @import "page/messages";
+
 @import "page/vote";
+@import "page/player";
 @import "page/band-grid";
 @import "page/band-detail";
 
