--- a/client/src/scss/base/_icons.scss
+++ b/client/src/scss/base/_icons.scss
@@ -52,5 +52,18 @@ i {
 .i-menu:before {
     content: "\e607";
 }
-
-
+.i-pause:before {
+    content: "\e60d";
+}
+.i-play:before {
+    content: "\e60e";
+}
+.i-shuffle:before {
+    content: "\e611";
+}
+.i-next:before {
+    content: "\e60f";
+}
+.i-prev:before {
+    content: "\e610";
+}
