--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -22,6 +22,7 @@
             try {
                 if (localStorage.sourceSansPro) {
                     // The font is in localStorage, we can load it directly
+//                    localStorage.clear();
                     addFont();
                 } else {
                     // We have to first load the font file asynchronously
