--- a/client/views/vote_layout/layout_vote.html
+++ b/client/views/vote_layout/layout_vote.html
@@ -21,6 +21,7 @@
 
             try {
                 if (localStorage.sourceSansPro) {
+//                    window.localStorage.clear();
                     // The font is in localStorage, we can load it directly
                     addFont();
                 } else {
