--- a/client/src/scss/page/_band-detail.scss
+++ b/client/src/scss/page/_band-detail.scss
@@ -2,6 +2,14 @@
     img {
         max-width: 100%;
     }
+
+    .header-image {
+        max-width: 200px;
+    }
+
+    h3 {
+        width: 100%;
+    }
 }
 
 .detail-header {
