--- a/client/src/scss/page/_vote.scss
+++ b/client/src/scss/page/_vote.scss
@@ -39,8 +39,9 @@ footer {
 
     @include breakpoint(m) {
         position: relative;
-        flex: 0 0 25%;
+        flex: 0 0 300px;
         height: 100vh;
+        padding: 3% 2%;
     }
 }
 
