add electro to music changer

--- a/client/views/landingpage.html
+++ b/client/views/landingpage.html
@@ -73,6 +73,7 @@
 				<b>reggae</b>
                 <b>pop</b>
                 <b>hip-hop</b>
+                <b>electronic</b>
                 <b>music</b>
 			</span>
         </h2>
