Add hint for djs

--- a/client/views/bands/tracks.html
+++ b/client/views/bands/tracks.html
@@ -41,5 +41,5 @@
 
 <div class="hint">
     <div class="step-no"><span>2</span><span>5</span></div>
-    Bitte ladet 3 bis 5 Songs hoch. Es können <strong>nur MP3-Dateien</strong> hochgeladen werden. Habt während des Uploads bitte ein bisschen Geduld, der Upload der Tracks dauert erfahrungsgemäß einen kleinen Moment länger.
+    Bitte ladet 3 bis 5 Songs hoch. Falls du ein DJ bist, lade bitte am besten 3 bis 5 Ausschnitte a 3 bis 5 Minuten aus deinen Mixen hoch. Es können <strong>nur MP3-Dateien</strong> hochgeladen werden. Habt während des Uploads bitte ein bisschen Geduld, der Upload der Tracks dauert erfahrungsgemäß einen kleinen Moment länger.
 </div>
