Add a small hint on the login that you're on the login page

--- a/client/views/vote/loginAndRegisterUser.html
+++ b/client/views/vote/loginAndRegisterUser.html
@@ -12,6 +12,11 @@
             <h1>
                 <span>welcome to</span>
                 tunefish
+                <span>&nbsp;</span>
+                <span>listen</span>
+                <span>vote</span>
+                <span>comment</span>
+
             </h1>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-6">
